# seim

./: Dockerfile  README.md  pyproject.toml
examples/: example_convenience.py  multi_stage_predictor_example.py
src/seim/: analyses.py  convenience.py  elasticities.py  model_estimation.r  model_estimation_wrapper.py  prediction.py
