[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "siem"
version = "0.0.1"
authors = [
  { name="EduFalbel" },
]
description = "Prediction and analysis methods for spatial econometric interaction models"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]